# auto-video-compiler

./: .gitignore  README.md  pyproject.toml  video_processing_utils.py
frontend/: README
frontend/src/: App.tsx
frontend/src/components/: MessageInput.tsx  ViralRecommendations.tsx
project/: vite.config.ts
project/src/: App.tsx
src/autovideo/: bgm.py  search.py  server.py  summarize.py
src/autovideo/data/: loaders.py  process.py
src/autovideo/models/: clip.py  gpt.py
