[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-video-compiler"
version = "0.0.1"
description = "Auto Video Compiler"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "numpy",
    "omegaconf",
    "openai",
    "openai-clip",
    "opencv-python",
    "torch",
    "torchvision",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autovideo"]